[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/pick_players.gd" type="Script" id=1]
[ext_resource path="res://asset/winDialog.tres" type="Theme" id=2]
[ext_resource path="res://asset/sounds/explosion.wav" type="AudioStream" id=4]
[ext_resource path="res://asset/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://asset/grid_theme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0705882, 0.478431, 0.403922, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0823529, 0.117647, 0.294118, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_top = 10
extra_spacing_bottom = 10
extra_spacing_char = 10
extra_spacing_space = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.156863, 0.196078, 0.392157, 1 )
border_width_top = 10
border_width_bottom = 10
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_top = 10
border_width_bottom = 10
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0823529, 0.117647, 0.294118, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.519653, 0.561951, 0.773438, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.156863, 0.196078, 0.392157, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0

[node name="Take_your_pick" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2048.0
margin_bottom = 1200.0
color = Color( 0.0705882, 0.478431, 0.403922, 1 )

[node name="vai" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 28.0
margin_right = 2022.0
margin_bottom = 1200.0

[node name="Container" type="HBoxContainer" parent="MarginContainer"]
margin_right = 1994.0
margin_bottom = 1200.0
rect_pivot_offset = Vector2( 1024, 0 )
rect_clip_content = true
size_flags_horizontal = 7
size_flags_vertical = 3
theme = ExtResource( 6 )
alignment = 1

[node name="Titolo" type="Label" parent="MarginContainer/Container"]
margin_left = 70.0
margin_top = 566.0
margin_right = 592.0
margin_bottom = 633.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Seleziona i presenti"
align = 1
valign = 1

[node name="VBox" type="VBoxContainer" parent="MarginContainer/Container"]
margin_left = 997.0
margin_right = 997.0
margin_bottom = 1200.0
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 7
theme = ExtResource( 6 )
custom_constants/separation = 10
alignment = 1

[node name="Bottone_vai" type="Button" parent="MarginContainer/Container"]
margin_left = 1332.0
margin_top = 549.0
margin_right = 1994.0
margin_bottom = 650.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 3 )
text = "Vai!"
expand_icon = true

[node name="edit_team_button" type="Button" parent="."]
margin_left = 264.0
margin_top = 240.0
margin_right = 493.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Edita team"

[node name="select_all" type="Button" parent="."]
margin_left = 224.0
margin_top = 904.0
margin_right = 529.0
margin_bottom = 984.0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Seleziona tutti"

[node name="go_back" type="Button" parent="."]
margin_left = 1544.0
margin_top = 904.0
margin_right = 1849.0
margin_bottom = 984.0
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Torna all'inizio"

[node name="None_selected_Window" type="AcceptDialog" parent="."]
margin_left = 776.0
margin_top = 544.0
margin_right = 1088.0
margin_bottom = 602.0
theme = ExtResource( 2 )
window_title = "Attenzione!"
dialog_text = "Per favore seleziona almeno due giocatori"

[node name="selected" type="Label" parent="."]
visible = false
margin_left = 1400.0
margin_top = 1110.0
margin_right = 1931.0
margin_bottom = 1177.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 1
valign = 1

[connection signal="pressed" from="MarginContainer/Container/Bottone_vai" to="." method="_on_Bottone_vai_pressed"]
[connection signal="button_up" from="edit_team_button" to="." method="_on_edit_team_button_button_up"]
[connection signal="button_up" from="select_all" to="." method="_on_select_all_button_up"]
[connection signal="button_up" from="go_back" to="." method="_on_go_back_button_up"]
